project(set10108-unit3 LANGUAGES CXX CUDA)
cmake_minimum_required(VERSION 3.17)
set(CMAKE_CXX_STANDARD 17)
include_directories(../contrib)

add_executable(smooth-1d-cuda smooth-1d.cu)
set_property(TARGET smooth-1d-cuda PROPERTY CUDA_SEPARABLE_COMPILATION ON)
add_executable(smooth-2d-cuda smooth-2d.cu)
set_property(TARGET smooth-2d-cuda PROPERTY CUDA_SEPARABLE_COMPILATION ON)
add_executable(smooth-2d-example-cuda smooth-2d-example.cu)
set_property(TARGET smooth-2d-example-cuda PROPERTY CUDA_SEPARABLE_COMPILATION ON)